# 2x

./: app-$(version).aar.in  build.gradle  c.bat  settings.gradle  svgren-$(version).aar.in
app/: build.gradle
app/src/androidTest/java/as/mke/eatmem/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: firstuse.xml  test.xml  testlayout.xml
app/src/main/cpp/: CMakeLists.txt  androidlog.h  global.h  register.cpp  utils.cpp  utils.h
app/src/main/cpp/decoder/: CMakeLists.txt  convert.h  decoder.cpp  decoder.h  decoderloadfile.cpp  decoderloadfile.h  test.cpp  test.h
app/src/main/cpp/main/: CMakeLists.txt  Mymain.cpp  Mymain.h  eat.cpp  eat.h  main.cpp  main.h  native-lib.cpp  register.cpp
app/src/main/java/as/mke/eatmem/: App.java  FirstActivity.java  MainApp.java  WithUInter.java
app/src/main/java/as/mke/eatmem/adapter/: ExpandableListViewAdapter.java  FirstPagerAdapter.java  ScreenAdaptation.java
app/src/main/java/as/mke/eatmem/animation/: MyAnimation.java  ViewExpandAnimation.java  WaveViewBySinCos.java
app/src/main/java/as/mke/eatmem/decoder/: GVSDecoder.java
app/src/main/java/as/mke/eatmem/processor/: UInter.java
app/src/main/res/anim/: bookrotate.xml  bookup.xml  dialog.xml  dialogclose.xml
app/src/main/res/color/: nav_menu_text_color.xml
app/src/main/res/drawable/: floatingbtn.xml  ic_book.xml  ic_keyboard_arrow_down_black_24dp.xml  ic_launcher.xml  ic_pager.xml  ic_pagerleft.xml  shape_button_startclearn.xml  shape_guide_point_active.xml  shape_guide_point_deactive.xml
app/src/main/res/layout/: about_alert.xml  activity_main_app.xml  bage_hint.xml  chidren_item.xml  expand_chidren_item.xml  firstuse.xml  guider_pager.xml  navigationview.xml  page1.xml  page2.xml  page3.xml  test.xml  userpaper.xml  xieyi.xml
app/src/main/res/menu/: leftmenu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/as/mke/eatmem/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
svgren/: CMakeLists.txt  build.gradle  proguard-rules.pro
svgren/src/main/: AndroidManifest.xml
(+9 files in other folders)
